Add jfr_lock_contention tool
Adds monitor-contention and thread-parking analysis with park-site
categorization (pool_idle_wait vs lock_acquire_wait vs connection_pool_wait
etc.), so 36k benign Tomcat-worker idle parks aren't mistaken for real
contention. Splits jfr_summary's `locks` flag into monitor_contention +
thread_parking and migrates notable_events_present to snake_case.